--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="movable-container">
-      <h1>Will You Kiss Me?🤭</h1>
+      <h1>Will You Marry Me?🤭</h1>
       <button type="submit" id="yes">Yes🥰</button>
       <button type="button" id="no">No🥺</button>
     </div>
