--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Will You Kiss Me?</title>
+    <title>Will You Marry Me?</title>
 
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
