added notification "unsopported devices"

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
-    <div class="movable-container">
+    <div class="container">
       <h1>Will You Marry Me?🤭</h1>
       <button type="submit" id="yes">Yes🥰</button>
       <button type="button" id="no">No🥺</button>
