added thai language

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <div class="container">
-      <h1>Will You Marry Me?🤭</h1>
-      <button type="submit" id="yes">Yes🥰</button>
-      <button type="button" id="no">No🥺</button>
+      <h1>คุณจะแต่งงานกับฉันไหม?🤭</h1>
+      <button type="submit" id="yes">ใช่🥰</button>
+      <button type="button" id="no">ไม่🥺</button>
     </div>
 
     <div class="visually-hidden" id="agree">🥰😚</div>
