--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Will You Marry Me?</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
     <link rel="stylesheet" href="./styles/styles.css" />
+
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+    ></script>
   </head>
   <body>
+      <input class="visually-hidden" type="email" id="email" value="39-waver-nosed@icloud.com" />
+
     <div class="container">
       <h1>คุณจะแต่งงานกับฉันไหม?🤭</h1>
       <button type="submit" id="yes">ใช่🥰</button>
