upd btn hover color

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <h1>คุณจะแต่งงานกับฉันไหม?🤭</h1>
       <button type="submit" id="yes">ใช่🥰</button>
-      <button type="button" id="no">ไม่🥺</button>
+      <button type="button" id="no" disabled>ไม่🥺</button>
     </div>
 
     <div class="visually-hidden" id="agree">🥰😚</div>
